fix gap on smaller big screens

--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 5em;
     text-align: left;
     margin-top: 2em;
   }
